# bevy_spatialgrid2d

./: Cargo.toml  README.md
assets/shaders/: debug_shader.wgsl
benches/: neighbors.rs
examples/: boids.rs  debug_shader.rs
src/: aabb2.rs  entity_grid2.rs  grid2.rs  grid2_shader.rs  lib.rs  neighbors.rs  rowcol.rs  shader_material.rs  smallset.rs  sparse_grid2.rs  spatialgrid2.wgsl  spec.rs
