[package]
edition = "2024"
name = "bevy_spatialgrid2d"
version = "0.19.0"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Create meshes from heightmap PNGs in the Bevy game engine."
documentation = "https://docs.rs/bevy_spatialgrid2d/latest/bevy_spatialgrid2d"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_spatialgrid2d"
repository = "https://github.com/Katsutoshii/bevy_spatialgrid2d"
keywords = ["bevy"]
readme = "README.md"
exclude = ["assets/*", "docs/**/*.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "std",
    "bevy_log",
    "bevy_state",
] }
bevy_newtonian2d = { version = "0.19" }

rand = { version = "0.8" }
smallvec = { version = "1" }

[features]
default = ["entity", "neighbors", "shader", "sparse"]
entity = []
neighbors = ["entity"]
sparse = []
shader = ["bevy/bevy_pbr", "bevy/bevy_render"]

[dev-dependencies]
bevy = { version = "0.19", default-features = true, features = [
    "file_watcher",
    "bevy_dev_tools",
    "dynamic_linking",
] }
bevy-inspector-egui = { version = "0.37" }
bevy_egui = { version = "0.40" }

[[example]]
name = "boids"

[[example]]
name = "debug_shader"
